--- a/1. scoreboard.md
+++ b/1. scoreboard.md
@@ -20,17 +20,17 @@
 
 
 <tr>
-<td markdown="span"></td>
-<td markdown="span"></td>
-<td markdown="span"></td>
-<td markdown="span"></td>
+<td markdown="span">2017 got-team11</td>
+<td markdown="span">[![BCH compliance](https://bettercodehub.com/edge/badge/gameoftrades/got-team11?branch=master&token=798bcb5a5479f2e3116c789552ba828824b56e91)](https://bettercodehub.com/)</td>
+<td markdown="span">2017 got-team12</td>
+<td markdown="span">[![BCH compliance](https://bettercodehub.com/edge/badge/gameoftrades/got-team12?branch=master&token=9db42619c4b54b71bc482cb4ab2fc7f0af4133ab)](https://bettercodehub.com/)</td>
 </tr>
 
 
 <tr>
+<td markdown="span">2018 got-team01</td>
 <td markdown="span"></td>
-<td markdown="span"></td>
-<td markdown="span"></td>
+<td markdown="span">2018 got-team02</td>
 <td markdown="span"></td>
 </tr>
 
